Test/git-issues/git-issue-3187b.dfy.expect
git-issue-3187b.dfy(6,10): Error: colon expected
git-issue-3187b.dfy(6,13): Error: field declarations may not be initialized
2 parse errors detected in git-issue-3187b.dfy
